--- a/resources/js/languages/en.json
+++ b/resources/js/languages/en.json
@@ -529,7 +529,13 @@
         "telr_store_auth_key" : "Telr Store Auth key",
         "telr_mode" : "Telr Mode",
         "telr_status" : "Telr Status",
-        "push_notification" : "Push Notification"
+        "push_notification" : "Push Notification",
+        "whatsapp_api_url": "WhatsApp API URL",
+        "whatsapp_api_path": "WhatsApp API Path",
+        "whatsapp_session": "WhatsApp Session",
+        "whatsapp_status": "WhatsApp Status",
+        "whatsapp_default_phone": "WhatsApp Default Phone",
+        "whatsapp_country_code": "WhatsApp Country Code"
     },
     "button": {
         "add": "Add",
