--- a/resources/js/languages/id.json
+++ b/resources/js/languages/id.json
@@ -48,6 +48,7 @@
       "update": "Memperbarui",
       "payment_gateway": "Payment Gateway",
       "sms_gateway": "Gateway Sms",
+      "whatsapp_gateway": "Gateway WhatsApp",
       "sales_report": "Laporan penjualan",
       "items_report": "Laporan Item",
       "edit_profile": "Sunting profil",
@@ -529,13 +530,7 @@
       "telr_store_auth_key": "Kunci Auth Toko Telr",
       "telr_mode": "Modus Telepon",
       "telr_status": "Status Telp",
-      "push_notification": "Notifikasi Dorong",
-      "whatsapp_api_url": "WhatsApp API URL",
-      "whatsapp_api_path": "WhatsApp API Path",
-      "whatsapp_session": "WhatsApp Session",
-      "whatsapp_status": "Status WhatsApp",
-      "whatsapp_default_phone": "WhatsApp Default Phone",
-      "whatsapp_country_code": "Kode Negara WhatsApp"
+      "push_notification": "Notifikasi Dorong"
     },
     "button": {
       "add": "Add",
